# ScholarClaw

./: .gitignore  CONTRIBUTING.md  README.md  SCHOLARCLAW_AGENTS.md  SCHOLARCLAW_CLAUDE.md  SKILL.md  config.scholarclaw.example.yaml  config.scholarclaw.yaml  prompts.default.yaml  pyproject.toml  sentinel.sh
docs/: BUG_FIX_DOCUMENT_20260316.md  CHANGELOG_ANTHROPIC_ADAPTER.md  PROJECT_PROPOSAL.md  README_CN.md  TESTER_GUIDE.md  agent_figure_and_benchmark_plan.md  integration-guide.md  issue_tracker_v9.md  iteration_plan_v8.md  iteration_showcase_narrative.md  metaclaw-integration-plan.md  next_phase_showcase_plan.md  pipeline_critical_fixes_v8.md  rate_limit_fix_plan.md  sandbox_environment_fix_plan.md
scholarclaw_engine/: __init__.py  __main__.py  cli.py  config.py  evolution.py  health.py  prompts.py  report.py
scripts/: metaclaw_start.sh  plot_iteration_showcase.py  test_code_agent_live.py  test_code_agent_sandbox.py  test_codegen_v2.py
tests/: conftest.py  e2e_docker_sandbox.py  e2e_real_llm.py  test_benchmark_agent.py  test_code_agent.py  test_decision_agent.py  test_figure_agent.py  test_rc_adapters.py  test_rc_cache.py  test_rc_checkpoint.py  test_rc_citation_verify.py  test_rc_cli.py  test_rc_config.py  test_rc_contracts.py  test_rc_docker_sandbox.py  test_rc_e2e_regression.py  test_rc_evolution.py  test_rc_executor.py  test_rc_hardware.py  test_rc_health.py  test_rc_kb.py  test_rc_literature.py  test_rc_llm.py  test_rc_novelty.py  test_rc_preflight.py  test_rc_prompts.py  test_rc_quality.py  test_rc_report.py  test_rc_runner.py  test_rc_sentinel.py  (+5 more)
(+83 files in other folders)
