[project]
name = "scholarclaw_engine"
version = "0.5.0"
description = "ScholarClaw — Autonomous Research Pipeline. Turn any research idea into a paper."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
anthropic = ["httpx>=0.24"]
dev = ["pytest>=7.0"]

[project.scripts]
scholarclaw = "scholarclaw_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["scholarclaw_engine"]

[tool.hatch.build.targets.wheel.force-include]
"scholarclaw_engine/templates/styles" = "scholarclaw_engine/templates/styles"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
